--- a/mainapp/templates/mainapp/layout/main_frame_no_sidebar.html
+++ b/mainapp/templates/mainapp/layout/main_frame_no_sidebar.html
@@ -89,7 +89,7 @@ Lower Header Section
             <div class="span4">
                 <h1>
                     <a class="logo" href="/"><span>Twitter Bootstrap ecommerce template</span>
-                        <img src="{% static 'mainapp/assets/img/logo-bootstrap-shoping-cart.png' %}"
+                        <img src="{% static 'mainapp/assets/img/logo.png' %}"
                              alt="bootstrap sexy shop">
                     </a>
                 </h1>
