custom admin site: add search function, display model inline

--- a/account/templates/account/my_account.html
+++ b/account/templates/account/my_account.html
@@ -9,12 +9,18 @@
         <div class="btn-group">
             {% if user.is_staff %}
                 <a href="/admin/" class="btn-danger btn-large" style="margin: 5px"> Trang quản lý</a>
+                <a href="{% url 'statistic:statistic_url' %}" class="btn-info btn-large" style="margin: 5px">
+                    Trang thống kê
+                </a>
             {% endif %}
-            <a href="{% url 'order:order_history_url' %}" class="shopBtn btn-large" style="margin: 5px">Lịch sử mua
-                hàng</a>
-            <a href="{% url 'cart:cart_url' %}" class="shopBtn btn-large" style="margin: 5px">Giỏ hàng</a>
-            <a href="{% url 'favourite:my_favourite_url' %}" class="shopBtn btn-large" style="margin: 5px">Sản phẩm đã
-                thích</a>
+            {% if not user.is_staff %}
+                <a href="{% url 'order:order_history_url' %}" class="shopBtn btn-large" style="margin: 5px">Lịch sử mua
+                    hàng</a>
+                <a href="{% url 'cart:cart_url' %}" class="shopBtn btn-large" style="margin: 5px">Giỏ hàng</a>
+                <a href="{% url 'favourite:my_favourite_url' %}" class="shopBtn btn-large" style="margin: 5px">Sản phẩm
+                    đã
+                    thích</a>
+            {% endif %}
         </div>
         <hr class="soft"/>
         <div class="well">
