--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -6,7 +6,7 @@
             <li><a href="{% url 'mainapp:index' %}">Trang chủ</a> <span class="divider">/</span></li>
             <li class="active">Đăng ký</li>
         </ul>
-        <h3> Đăng ký tài khoản</h3>
+        <h2> Đăng ký tài khoản</h2>
         <hr class="soft"/>
         <div class="well">
             <form class="form-horizontal" action="" method="post" id="register_form">
@@ -23,18 +23,22 @@
                     <label class="control-label" for="username">Tài khoản <sup>*</sup></label>
                     <div class="controls">
                         <input type="text" id="username" placeholder="Tài khoản" name="username" value="{{ username }}">
+                        <span class=" alert-error">{{ username_message }}</span>
                     </div>
                 </div>
                 <div class="control-group">
                     <label class="control-label" for="password">Mật khẩu <sup>*</sup></label>
                     <div class="controls">
                         <input type="password" id="password" placeholder="Mật khẩu" name="password">
+                        <span class=" alert-error">{{ password_message }}</span>
                     </div>
                 </div>
                 <div class="control-group">
                     <label class="control-label" for="repassword">Nhập lại mật khẩu <sup>*</sup></label>
                     <div class="controls">
                         <input type="password" id="repassword" placeholder="Nhập lại Mật khẩu" name="repassword">
+                        <span class=" alert-error">{{ repassword_message }}</span>
+
                     </div>
                 </div>
                 <div class="control-group">
@@ -42,6 +46,8 @@
                     <div class="controls">
                         <input type="text" id="displayName" placeholder="Tên" name="displayName"
                                value="{{ displayName }}">
+                        <span class=" alert-error">{{ displayName_message }}</span>
+
                     </div>
                 </div>
                 <div class="control-group">
@@ -52,12 +58,16 @@
                             <option value="0">Nữ</option>
                             <option value="2">Pede</option>
                         </select>
+                        <span class=" alert-error">{{ gender_message }}</span>
+
                     </div>
                 </div>
                 <div class="control-group">
                     <label class="control-label" for="phone">Điện thoại <sup>*</sup></label>
                     <div class="controls">
                         <input type="text" id="phone" placeholder="Điện thoại" name="phone" value="{{ phone }}">
+                        <span class=" alert-error">{{ phone_message }}</span>
+
                     </div>
                 </div>
                 <div class="control-group">
@@ -69,7 +79,9 @@
                 <div class="control-group">
                     <label class="control-label" for="address">Địa chỉ <sup>*</sup></label>
                     <div class="controls">
-                        <textarea id="address" placeholder="Địa chỉ" name="address" form="register_form" >{{ address }}</textarea>
+                        <textarea id="address" placeholder="Địa chỉ" name="address"
+                                  form="register_form">{{ address }}</textarea>
+                        <span class=" alert-error">{{ address_message }}</span>
                     </div>
                 </div>
                 <div class="control-group">
