--- a/mainapp/templates/mainapp/layout/main_frame_no_sidebar.html
+++ b/mainapp/templates/mainapp/layout/main_frame_no_sidebar.html
@@ -23,7 +23,7 @@
     <![endif]-->
 
     <!-- Favicons -->
-    <link rel="shortcut icon" href="{% static 'mainapp/assets/ico/favicon.ico' %}">
+    <link rel="shortcut icon" href="{% static 'mainapp/assets/ico/pngguru.com.png' %}">
     <style>
         body {
             background-image: url('{% static 'mainapp/img/background/white_leather.png' %}');
@@ -69,6 +69,12 @@
                 </div>
                 <a class="{% if request.path == '/' %}active{% endif %}" href="{% url 'mainapp:index' %}"> <span
                         class="icon-home"></span> Trang chủ</a>
+                {% if user.is_staff %}
+                    <a href="{% url 'statistic:statistic_url' %}"
+                       class="{% if request.path == '/statistic/' %}active{% endif %}">
+                        <span class="icon-dashboard"></span> Bảng điều khiển
+                    </a>
+                {% endif %}
                 {% if user.is_authenticated %}
                     <a class="{% if request.path == '/account/my_account/' %}active{% endif %}"
                        href="{% url 'account:my_account_url' %}">
@@ -82,7 +88,10 @@
                     <a class="{% if request.path == '/account/register/' %}active{% endif %}"
                        href="{% url 'account:register_url' %}"><span class="icon-edit"></span> Đăng ký </a>
                 {% endif %}
-                <a href="{% url 'contact_us:contact_url' %}"><span class="icon-envelope"></span> Liên hệ</a>
+                {% if not user.is_staff %}
+                    <a href="{% url 'contact_us:contact_url' %}"><span class="icon-envelope"></span> Liên hệ</a>
+                {% endif %}
+
                 <a href="{% url 'cart:cart_url' %}"><span class="icon-shopping-cart"></span> {{ items_on_cart }} Item(s)
                     - <span
                             class="badge badge-warning"> {{ total_products_price }} <sup>đ</sup></span></a>
@@ -255,13 +264,13 @@ Lower Header Section
                 <a href="#">Top bán chạy</a><br>
                 <a href="#">Hàng giới hạn</a><br>
             </div>
-{#            <div class="span6">#}
-{#                <h5>The standard chunk of Lorem</h5>#}
-{#                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for#}
-{#                those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et#}
-{#                Malorum" by Cicero are also reproduced in their exact original form,#}
-{#                accompanied by English versions from the 1914 translation by H. Rackham.#}
-{#            </div>#}
+            {#            <div class="span6">#}
+            {#                <h5>The standard chunk of Lorem</h5>#}
+            {#                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for#}
+            {#                those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et#}
+            {#                Malorum" by Cicero are also reproduced in their exact original form,#}
+            {#                accompanied by English versions from the 1914 translation by H. Rackham.#}
+            {#            </div>#}
         </div>
     </footer>
 </div><!-- /container -->
@@ -275,12 +284,89 @@ Lower Header Section
             <a href="#"><img src="{% static 'mainapp/assets/img/visa.png' %}" alt="payment"></a>
             <a href="#"><img src="{% static 'mainapp/assets/img/disc.png' %}" alt="payment"></a>
         </p>
-{#        <span>Copyright &copy; 2020<br> Nguyễn Đình Giang</span>#}
+        {#        <span>Copyright &copy; 2020<br> Nguyễn Đình Giang</span>#}
         <span>Copyright &copy; 2020<br></span>
     </div>
 </div>
 
-<a class="button_messenger" href="m.me/105001081190075" target="_blank"></a>
+<div id="fb-root"></div>
+<script src="{% static 'mainapp/assets/js/jquery.min.js' %}" type="text/javascript"></script>
+<script type="text/javascript">
+    (function (d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
+<script>
+    var div = document.createElement('div');
+    var lan = 'vi';
+    div.className = 'fb-customerchat';
+    div.setAttribute('page_id', '105001081190075');
+
+    jQuery(document).ready(function () {
+        if (lan === 'vi') {
+            div.setAttribute('logged_out_greeting', 'Chào bạn! Chúng tôi sẵn sàng trả lời tất cả câu hỏi của bạn.');
+            div.setAttribute('logged_in_greeting', 'Chào bạn! Chúng tôi có thể giúp được gì cho bạn?');
+        } else {
+            div.setAttribute('logged_out_greeting', 'Hi! We\'re here to answer any questions you may have.');
+            div.setAttribute('logged_in_greeting', 'Hi! How can we help you?');
+        }
+    });
+
+    document.body.appendChild(div);
+
+    window.fbMessengerPlugins = window.fbMessengerPlugins || {
+        init: function () {
+            FB.init({
+                appId: '906375156474952',
+                autoLogAppEvents: true,
+                xfbml: true,
+                version: 'v2.10'
+            });
+        }, callable: []
+    };
+    window.fbAsyncInit = window.fbAsyncInit || function () {
+        window.fbMessengerPlugins.callable.forEach(function (item) {
+            item();
+        });
+        window.fbMessengerPlugins.init();
+    };
+    setTimeout(function () {
+        (function (d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {
+                return;
+            }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "//connect.facebook.net/en_US/sdk/xfbml.customerchat.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    }, 0);
+</script>
+
+{#<script>#}
+{#    window.fbAsyncInit = function () {#}
+{#        FB.init({#}
+{#            xfbml: true,#}
+{#            version: 'v4.0'#}
+{#        });#}
+{#    };#}
+{##}
+{#    (function (d, s, id) {#}
+{#        var js, fjs = d.getElementsByTagName(s)[0];#}
+{#        if (d.getElementById(id)) return;#}
+{#        js = d.createElement(s);#}
+{#        js.id = id;#}
+{#        js.src = 'https://connect.facebook.net/vi_VN/sdk/xfbml.customerchat.js';#}
+{#        fjs.parentNode.insertBefore(js, fjs);#}
+{#    }(document, 'script', 'facebook-jssdk'));#}
+{#</script>#}
+{#<a class="button_messenger" href="http://m.me/105001081190075" target="_blank"></a>#}
 
 {#<div class="fb-customerchat"#}
 {#     page_id="105001081190075"#}
