--- a/order/templates/order/order_history.html
+++ b/order/templates/order/order_history.html
@@ -17,7 +17,7 @@
                         <div class="span2">
                         </div>
                         <div class="span6">
-                            <h5><a href="{% url 'order:order_detail_url' order_package_id=order_package.id %}">Mã gói
+                            <h5><a href="{% url 'order:order_detail_url' order_package_id=order_package.id %}">Mã đơn
                                 hàng: {{ order_package.id }}</a></h5>
                             <p>Ngày đặt: {{ order_package.dateOrder|date:'d-m-Y' }}</p>
                             {% if order_package.status != 5 %}
